--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,4 +3,5 @@
 @import '~vuetify/dist/vuetify.min.css';
 @import '~@mdi/font/css/materialdesignicons.min.css';
 @import "~vazir-font/dist/font-face.css";
+@import "~animate.css/animate.min.css";
 
